--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/VC/CNMatchDepositStatusVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/VC/CNMatchDepositStatusVC.xib
@@ -26,9 +26,6 @@
                 <outlet property="pictureView" destination="fvc-fh-grn" id="Ur3-Cj-hNf"/>
                 <outlet property="subBankName" destination="cOd-j9-prl" id="mu8-Qe-V3Q"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-                <outletCollection property="contentLbArray" destination="IBN-BR-PRs" id="Pug-hF-bVQ"/>
-                <outletCollection property="contentLbArray" destination="lMW-eM-nbh" id="qJ5-4I-HMT"/>
-                <outletCollection property="contentLbArray" destination="cOd-j9-prl" id="gIz-T4-bJ9"/>
                 <outletCollection property="pictureBtnArr" destination="uzM-N4-v15" id="WZy-nY-2n8"/>
                 <outletCollection property="pictureBtnArr" destination="sUf-h6-3FX" id="bZc-1F-Jya"/>
                 <outletCollection property="pictureBtnArr" destination="ZDf-uy-jkX" id="cwH-NZ-Cn0"/>
@@ -40,6 +37,9 @@
                 <outletCollection property="btnCopyArray" destination="h3M-hr-fSt" id="0Me-r9-NSe"/>
                 <outletCollection property="btnCopyArray" destination="8nb-xM-wLp" id="Bnc-Pi-8Ta"/>
                 <outletCollection property="btnCopyArray" destination="xYQ-Dh-MqM" id="p8C-gP-EU6"/>
+                <outletCollection property="contentLbArray" destination="lMW-eM-nbh" id="e3z-Mu-0Rx"/>
+                <outletCollection property="contentLbArray" destination="IBN-BR-PRs" id="soO-I6-St5"/>
+                <outletCollection property="contentLbArray" destination="cOd-j9-prl" id="WWE-et-gYp"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -113,49 +113,8 @@
                                                         <constraint firstItem="aN7-ka-cHi" firstAttribute="centerY" secondItem="Oth-ev-Gx5" secondAttribute="centerY" id="q3U-SK-MvI"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="37s-xJ-2a8">
-                                                    <rect key="frame" x="0.0" y="62" width="384" height="50"/>
-                                                    <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收款账户：" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nus-B2-b2e">
-                                                            <rect key="frame" x="15" y="16.5" width="60" height="17"/>
-                                                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
-                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBN-BR-PRs">
-                                                            <rect key="frame" x="75" y="25" width="0.0" height="0.0"/>
-                                                            <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="14"/>
-                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3M-hr-fSt">
-                                                            <rect key="frame" x="334" y="0.0" width="40" height="50"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="40" id="0uA-D0-Yvg"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
-                                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                            <state key="normal" title="复制">
-                                                                <color key="titleColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
-                                                            </state>
-                                                            <connections>
-                                                                <action selector="copyContent:" destination="-1" eventType="touchUpInside" id="cba-j8-mDI"/>
-                                                            </connections>
-                                                        </button>
-                                                    </subviews>
-                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <constraints>
-                                                        <constraint firstItem="Nus-B2-b2e" firstAttribute="centerY" secondItem="37s-xJ-2a8" secondAttribute="centerY" id="A8V-0I-VTL"/>
-                                                        <constraint firstAttribute="trailing" secondItem="h3M-hr-fSt" secondAttribute="trailing" constant="10" id="Hq6-VE-Vax"/>
-                                                        <constraint firstItem="IBN-BR-PRs" firstAttribute="centerY" secondItem="37s-xJ-2a8" secondAttribute="centerY" id="TDc-cu-y4h"/>
-                                                        <constraint firstItem="h3M-hr-fSt" firstAttribute="top" secondItem="37s-xJ-2a8" secondAttribute="top" id="aGT-s5-9fm"/>
-                                                        <constraint firstAttribute="bottom" secondItem="h3M-hr-fSt" secondAttribute="bottom" id="aOG-Zo-WmI"/>
-                                                        <constraint firstItem="Nus-B2-b2e" firstAttribute="leading" secondItem="37s-xJ-2a8" secondAttribute="leading" constant="15" id="fvD-Ym-Fdt"/>
-                                                        <constraint firstItem="IBN-BR-PRs" firstAttribute="leading" secondItem="Nus-B2-b2e" secondAttribute="trailing" id="zfw-w0-V4Q"/>
-                                                    </constraints>
-                                                </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IKE-mF-OjY">
-                                                    <rect key="frame" x="0.0" y="124" width="384" height="50"/>
+                                                    <rect key="frame" x="0.0" y="62" width="384" height="50"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收款卡号：" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9hF-DK-5zq">
                                                             <rect key="frame" x="15" y="16.5" width="60" height="17"/>
@@ -169,7 +128,7 @@
                                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8nb-xM-wLp">
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8nb-xM-wLp">
                                                             <rect key="frame" x="334" y="0.0" width="40" height="50"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="40" id="hSq-Ra-ZY9"/>
@@ -193,6 +152,47 @@
                                                         <constraint firstAttribute="trailing" secondItem="8nb-xM-wLp" secondAttribute="trailing" constant="10" id="fy0-Cb-7sb"/>
                                                         <constraint firstItem="8nb-xM-wLp" firstAttribute="top" secondItem="IKE-mF-OjY" secondAttribute="top" id="igt-gt-swS"/>
                                                         <constraint firstItem="9hF-DK-5zq" firstAttribute="centerY" secondItem="IKE-mF-OjY" secondAttribute="centerY" id="vkI-E5-bBI"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="37s-xJ-2a8">
+                                                    <rect key="frame" x="0.0" y="124" width="384" height="50"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收款账户：" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nus-B2-b2e">
+                                                            <rect key="frame" x="15" y="16.5" width="60" height="17"/>
+                                                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBN-BR-PRs">
+                                                            <rect key="frame" x="75" y="25" width="0.0" height="0.0"/>
+                                                            <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="14"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3M-hr-fSt">
+                                                            <rect key="frame" x="334" y="0.0" width="40" height="50"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="40" id="0uA-D0-Yvg"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                                                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                            <state key="normal" title="复制">
+                                                                <color key="titleColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                                            </state>
+                                                            <connections>
+                                                                <action selector="copyContent:" destination="-1" eventType="touchUpInside" id="cba-j8-mDI"/>
+                                                            </connections>
+                                                        </button>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstItem="Nus-B2-b2e" firstAttribute="centerY" secondItem="37s-xJ-2a8" secondAttribute="centerY" id="A8V-0I-VTL"/>
+                                                        <constraint firstAttribute="trailing" secondItem="h3M-hr-fSt" secondAttribute="trailing" constant="10" id="Hq6-VE-Vax"/>
+                                                        <constraint firstItem="IBN-BR-PRs" firstAttribute="centerY" secondItem="37s-xJ-2a8" secondAttribute="centerY" id="TDc-cu-y4h"/>
+                                                        <constraint firstItem="h3M-hr-fSt" firstAttribute="top" secondItem="37s-xJ-2a8" secondAttribute="top" id="aGT-s5-9fm"/>
+                                                        <constraint firstAttribute="bottom" secondItem="h3M-hr-fSt" secondAttribute="bottom" id="aOG-Zo-WmI"/>
+                                                        <constraint firstItem="Nus-B2-b2e" firstAttribute="leading" secondItem="37s-xJ-2a8" secondAttribute="leading" constant="15" id="fvD-Ym-Fdt"/>
+                                                        <constraint firstItem="IBN-BR-PRs" firstAttribute="leading" secondItem="Nus-B2-b2e" secondAttribute="trailing" id="zfw-w0-V4Q"/>
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Rs-UT-axN">
