--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/VC/CNMatchDepositStatusVC.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/VC/CNMatchDepositStatusVC.xib
@@ -12,12 +12,15 @@
             <connections>
                 <outlet property="accountName" destination="IBN-BR-PRs" id="MR0-9R-AAr"/>
                 <outlet property="accountNo" destination="lMW-eM-nbh" id="Gwk-wc-ycy"/>
+                <outlet property="actionTipLb" destination="LRJ-nR-8Il" id="mgT-y7-Sgj"/>
                 <outlet property="amountLb" destination="az3-Ng-B4K" id="rxs-Uc-TS1"/>
                 <outlet property="amountTipLb" destination="iVX-5s-52Y" id="Jke-ho-l4y"/>
                 <outlet property="bankLogo" destination="aN7-ka-cHi" id="7hT-PK-wdS"/>
                 <outlet property="bankName" destination="1F0-JF-YfW" id="Uuo-EZ-lX3"/>
                 <outlet property="bankView" destination="PoK-fU-Iad" id="beP-Ie-oE7"/>
                 <outlet property="confirmBtn" destination="vYd-ok-Vjf" id="ubN-eH-5MJ"/>
+                <outlet property="serverView" destination="kaf-Pj-4RC" id="e16-0S-wu8"/>
+                <outlet property="serverViewH" destination="nQV-h8-q7i" id="LhZ-ou-WIs"/>
                 <outlet property="subBankName" destination="cOd-j9-prl" id="mu8-Qe-V3Q"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outletCollection property="btnCopyArray" destination="h3M-hr-fSt" id="0Me-r9-NSe"/>
@@ -36,7 +39,7 @@
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S4m-2v-Fqf">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hwi-1K-OGi" userLabel="MiddleView">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hwi-1K-OGi" userLabel="BankView">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="402"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xrg-02-VTx">
@@ -248,11 +251,11 @@
                                 <constraint firstItem="xrg-02-VTx" firstAttribute="top" secondItem="hwi-1K-OGi" secondAttribute="top" constant="30" id="yvX-8Y-zCE"/>
                             </constraints>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CZH-wS-Mpe" userLabel="BottomView">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CZH-wS-Mpe" userLabel="ButtonView">
                             <rect key="frame" x="0.0" y="402" width="414" height="118"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请完成存款后，再点击确认存款" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRJ-nR-8Il">
-                                    <rect key="frame" x="116" y="25" width="182" height="20"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRJ-nR-8Il">
+                                    <rect key="frame" x="207" y="25" width="0.0" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="Mak-Q3-BMC"/>
                                     </constraints>
@@ -282,12 +285,45 @@
                                 <constraint firstItem="LRJ-nR-8Il" firstAttribute="centerX" secondItem="CZH-wS-Mpe" secondAttribute="centerX" id="sW2-SO-9cH"/>
                             </constraints>
                         </view>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kaf-Pj-4RC" userLabel="ServerView">
+                            <rect key="frame" x="0.0" y="520" width="414" height="0.0"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="如有疑问，请及时联系客服" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L05-D1-CzF">
+                                    <rect key="frame" x="135" y="15" width="144" height="17"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                                    <color key="textColor" red="0.42745098040000001" green="0.46666666670000001" blue="0.5450980392" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ctm-We-91m">
+                                    <rect key="frame" x="181" y="38" width="52" height="31"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="13"/>
+                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                    <state key="normal" title="联系客服">
+                                        <color key="titleColor" red="0.062745098040000002" green="0.70588235290000001" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="customerServer" destination="-1" eventType="touchUpInside" id="sfj-W8-XYw"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="ctm-We-91m" firstAttribute="centerX" secondItem="kaf-Pj-4RC" secondAttribute="centerX" id="BJo-0B-Ubb"/>
+                                <constraint firstItem="L05-D1-CzF" firstAttribute="centerX" secondItem="kaf-Pj-4RC" secondAttribute="centerX" id="OME-aA-2gf"/>
+                                <constraint firstItem="ctm-We-91m" firstAttribute="top" secondItem="L05-D1-CzF" secondAttribute="bottom" constant="6" id="efI-WJ-yk1"/>
+                                <constraint firstAttribute="height" id="nQV-h8-q7i"/>
+                                <constraint firstItem="L05-D1-CzF" firstAttribute="top" secondItem="kaf-Pj-4RC" secondAttribute="top" constant="15" id="pXy-Wq-BXT"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="kaf-Pj-4RC" firstAttribute="leading" secondItem="S4m-2v-Fqf" secondAttribute="leading" id="3dj-3a-dB2"/>
                         <constraint firstAttribute="trailing" secondItem="hwi-1K-OGi" secondAttribute="trailing" id="9Du-yi-qXl"/>
+                        <constraint firstAttribute="bottom" secondItem="kaf-Pj-4RC" secondAttribute="bottom" id="9ef-8o-26m"/>
                         <constraint firstItem="CZH-wS-Mpe" firstAttribute="leading" secondItem="S4m-2v-Fqf" secondAttribute="leading" id="MYt-2U-zaD"/>
+                        <constraint firstAttribute="trailing" secondItem="kaf-Pj-4RC" secondAttribute="trailing" id="QPN-ZI-rRC"/>
                         <constraint firstItem="CZH-wS-Mpe" firstAttribute="top" secondItem="hwi-1K-OGi" secondAttribute="bottom" id="Spe-gJ-Pix"/>
-                        <constraint firstAttribute="bottom" secondItem="CZH-wS-Mpe" secondAttribute="bottom" id="UPx-2l-MDb"/>
+                        <constraint firstItem="kaf-Pj-4RC" firstAttribute="top" secondItem="CZH-wS-Mpe" secondAttribute="bottom" id="UPx-2l-MDb"/>
                         <constraint firstItem="hwi-1K-OGi" firstAttribute="top" secondItem="S4m-2v-Fqf" secondAttribute="top" id="Umb-Jr-qpr"/>
                         <constraint firstItem="hwi-1K-OGi" firstAttribute="leading" secondItem="S4m-2v-Fqf" secondAttribute="leading" id="gzr-qg-iLZ"/>
                         <constraint firstAttribute="trailing" secondItem="CZH-wS-Mpe" secondAttribute="trailing" id="lQq-vp-cKm"/>
