--- a/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/View/View/CNMUploadView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/MatchPay/MatchDeposit/View/View/CNMUploadView.xib
@@ -354,7 +354,7 @@
                                         <constraint firstAttribute="height" constant="48" id="FGD-yP-wDl"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <state key="normal" title="确认存款"/>
+                                    <state key="normal" title="上传凭证"/>
                                     <connections>
                                         <action selector="confirm:" destination="-1" eventType="touchUpInside" id="NiE-fZ-HCr"/>
                                     </connections>
