--- a/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/WithdrawComponent/Controller/HYWithdrawViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,8 +13,15 @@
             <connections>
                 <outlet property="explanationButton" destination="ttx-ZJ-u38" id="WDN-Kk-GaJ"/>
                 <outlet property="fundpwdEntryBg" destination="hRM-ja-CUf" id="rvK-5Q-ZNV"/>
+                <outlet property="hisAmountLB" destination="abx-lJ-nLQ" id="QHo-hx-uu3"/>
+                <outlet property="hisConfirmBtn" destination="sT7-6j-Pdt" id="sWq-9v-Ln1"/>
+                <outlet property="hisNoConfirmBtn" destination="wbk-f5-ESp" id="hwD-jG-fqs"/>
+                <outlet property="hisOrderNoLB" destination="6Mj-EM-ywj" id="aT1-EM-UVg"/>
+                <outlet property="hisOrderStackView" destination="Msa-M2-rKP" id="Ljg-6C-rxB"/>
+                <outlet property="historyView" destination="XfX-y3-blh" id="vh8-RJ-kou"/>
                 <outlet property="sumitBtn" destination="az0-7H-f0l" id="z9F-8V-hpw"/>
                 <outlet property="tableView" destination="RxF-ga-guY" id="3Zw-aD-Kh8"/>
+                <outlet property="tableViewTop" destination="Ndn-h9-gWH" id="rsK-11-EcQ"/>
                 <outlet property="transferYEBButton" destination="9m7-lJ-3tP" id="RCg-oX-wtV"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="withdrawAmoutLabel" destination="qOV-h4-A6b" id="Xt1-XX-YVm"/>
@@ -77,7 +84,7 @@
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="RxF-ga-guY">
-                    <rect key="frame" x="0.0" y="170" width="414" height="579"/>
+                    <rect key="frame" x="0.0" y="304" width="414" height="445"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="O9r-N8-YYt"/>
@@ -107,19 +114,120 @@
                         <constraint firstAttribute="height" constant="30" id="Nh5-Kr-QD0"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XfX-y3-blh">
+                    <rect key="frame" x="0.0" y="214" width="414" height="89"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Msa-M2-rKP">
+                            <rect key="frame" x="20" y="23" width="65" height="43.5"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取款订单" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nDV-a7-cTH">
+                                    <rect key="frame" x="0.0" y="0.0" width="65" height="17"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                                    <color key="textColor" red="0.61960784310000006" green="0.61960784310000006" blue="0.61960784310000006" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Axxxxxxxx" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Mj-EM-ywj">
+                                    <rect key="frame" x="0.0" y="25" width="65" height="18.5"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="13"/>
+                                    <color key="textColor" red="0.062745098040000002" green="0.70588235290000001" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="L5k-sV-LsE">
+                            <rect key="frame" x="105" y="23" width="48" height="43.5"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="取款金额" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xb6-wI-CUT">
+                                    <rect key="frame" x="0.0" y="0.0" width="48" height="17"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="12"/>
+                                    <color key="textColor" red="0.61960784310000006" green="0.61960784310000006" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="abx-lJ-nLQ">
+                                    <rect key="frame" x="0.0" y="25" width="48" height="18.5"/>
+                                    <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="13"/>
+                                    <color key="textColor" red="0.062745098040000002" green="0.70588235290000001" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                        </stackView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="wqu-Gd-eHs">
+                            <rect key="frame" x="304" y="8.5" width="90" height="72"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sT7-6j-Pdt">
+                                    <rect key="frame" x="0.0" y="0.0" width="90" height="32"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="32" id="FCZ-y3-7Az"/>
+                                        <constraint firstAttribute="width" constant="90" id="oBL-XM-QYZ"/>
+                                    </constraints>
+                                    <color key="tintColor" red="1" green="0.92156862750000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain">
+                                        <attributedString key="attributedTitle">
+                                            <fragment content="确认到账">
+                                                <attributes>
+                                                    <color key="NSColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <font key="NSFont" size="13" name="PingFangSC-Semibold"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                    </buttonConfiguration>
+                                    <connections>
+                                        <action selector="confirmBtnClicked:" destination="-1" eventType="touchUpInside" id="bGT-R1-ZSF"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbk-f5-ESp">
+                                    <rect key="frame" x="0.0" y="40" width="90" height="32"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="32" id="t6a-Ys-EA7"/>
+                                        <constraint firstAttribute="width" constant="90" id="xQf-ta-cs9"/>
+                                    </constraints>
+                                    <color key="tintColor" red="1" green="0.92156862750000001" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain">
+                                        <attributedString key="attributedTitle">
+                                            <fragment content="没有到账">
+                                                <attributes>
+                                                    <color key="NSColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <font key="NSFont" size="13" name="PingFangSC-Semibold"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                    </buttonConfiguration>
+                                    <connections>
+                                        <action selector="noConfirmBtnClicked:" destination="-1" eventType="touchUpInside" id="eBB-uy-OOi"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" red="0.2196078431372549" green="0.2196078431372549" blue="0.36078431372549019" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="89" id="51m-YZ-toh"/>
+                        <constraint firstItem="Msa-M2-rKP" firstAttribute="leading" secondItem="XfX-y3-blh" secondAttribute="leading" constant="20" id="5Gk-P6-vkV"/>
+                        <constraint firstItem="Msa-M2-rKP" firstAttribute="centerY" secondItem="XfX-y3-blh" secondAttribute="centerY" id="Op2-q9-WMb"/>
+                        <constraint firstAttribute="trailing" secondItem="wqu-Gd-eHs" secondAttribute="trailing" constant="20" id="PAk-tQ-pLF"/>
+                        <constraint firstItem="L5k-sV-LsE" firstAttribute="leading" secondItem="Msa-M2-rKP" secondAttribute="trailing" constant="20" id="haa-FA-xto"/>
+                        <constraint firstItem="L5k-sV-LsE" firstAttribute="centerY" secondItem="XfX-y3-blh" secondAttribute="centerY" id="nRO-BM-IWE"/>
+                        <constraint firstItem="wqu-Gd-eHs" firstAttribute="centerY" secondItem="XfX-y3-blh" secondAttribute="centerY" id="yzb-rS-MCR"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="XfX-y3-blh" secondAttribute="trailing" id="3NG-NE-tCN"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="hRM-ja-CUf" secondAttribute="trailing" id="9IZ-8f-cpT"/>
                 <constraint firstItem="az0-7H-f0l" firstAttribute="top" secondItem="hRM-ja-CUf" secondAttribute="bottom" constant="15" id="9V7-Qp-ZvU"/>
                 <constraint firstItem="hRM-ja-CUf" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="A6R-my-sIe"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="Bms-LJ-jC6"/>
                 <constraint firstItem="hRM-ja-CUf" firstAttribute="top" secondItem="RxF-ga-guY" secondAttribute="bottom" id="Dmz-dd-btE"/>
-                <constraint firstItem="RxF-ga-guY" firstAttribute="top" secondItem="TJv-mn-le0" secondAttribute="bottom" constant="6" id="Ndn-h9-gWH"/>
+                <constraint firstItem="RxF-ga-guY" firstAttribute="top" secondItem="TJv-mn-le0" secondAttribute="bottom" constant="140" id="Ndn-h9-gWH"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="QCJ-bQ-0rx"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="RxF-ga-guY" secondAttribute="trailing" id="cb4-Rj-ZpE"/>
                 <constraint firstItem="az0-7H-f0l" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="eQY-1v-ZiQ"/>
+                <constraint firstItem="XfX-y3-blh" firstAttribute="top" secondItem="TJv-mn-le0" secondAttribute="bottom" constant="50" id="hZC-3I-Xap"/>
+                <constraint firstItem="XfX-y3-blh" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="iel-tR-2h0"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="az0-7H-f0l" secondAttribute="trailing" constant="15" id="lIe-8V-0FF"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="az0-7H-f0l" secondAttribute="bottom" constant="20" id="qPo-gs-R0N"/>
                 <constraint firstItem="TJv-mn-le0" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="vHy-4C-dcG"/>
