--- a/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/CNMBillView.xib
+++ b/HYNewNest/Features(主代码)/WalletComponent/RechargeComponent/View/CNMBillView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -80,21 +79,31 @@
                                 <action selector="copyBill:" destination="-1" eventType="touchUpInside" id="QLf-uv-OiN"/>
                             </connections>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BXI-42-t07" userLabel="LineView">
+                            <rect key="frame" x="0.0" y="152.5" width="414" height="0.5"/>
+                            <color key="backgroundColor" red="0.42745098040000001" green="0.46666666670000001" blue="0.5450980392" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="0.5" id="dtx-On-7Lx"/>
+                            </constraints>
+                        </view>
                     </subviews>
-                    <color key="backgroundColor" red="0.12941176470588234" green="0.12941176470588234" blue="0.21568627450980393" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="ur7-NP-dUu" firstAttribute="leading" secondItem="GEn-90-X04" secondAttribute="leading" id="1tk-1I-nYB"/>
                         <constraint firstItem="ur7-NP-dUu" firstAttribute="top" secondItem="GEn-90-X04" secondAttribute="top" id="4Tg-Kg-ccx"/>
+                        <constraint firstAttribute="bottom" secondItem="BXI-42-t07" secondAttribute="bottom" id="9P8-0a-adO"/>
                         <constraint firstItem="ur7-NP-dUu" firstAttribute="bottom" secondItem="GEn-90-X04" secondAttribute="bottom" id="Jx8-dk-AJ6"/>
                         <constraint firstItem="n35-ss-yCe" firstAttribute="leading" secondItem="CBN-ZO-Rbt" secondAttribute="leading" constant="15" id="MlC-cA-M7k"/>
                         <constraint firstAttribute="trailing" secondItem="JhZ-fA-tvw" secondAttribute="trailing" constant="15" id="Ptk-v0-G2e"/>
                         <constraint firstItem="ur7-NP-dUu" firstAttribute="trailing" secondItem="GEn-90-X04" secondAttribute="trailing" id="Rnd-uB-jyr"/>
+                        <constraint firstItem="BXI-42-t07" firstAttribute="leading" secondItem="CBN-ZO-Rbt" secondAttribute="leading" id="Xzd-uY-PT3"/>
                         <constraint firstItem="JhZ-fA-tvw" firstAttribute="centerY" secondItem="CBN-ZO-Rbt" secondAttribute="centerY" id="pcJ-TP-R9m"/>
                         <constraint firstItem="n35-ss-yCe" firstAttribute="centerY" secondItem="CBN-ZO-Rbt" secondAttribute="centerY" id="rag-Sx-M5n"/>
+                        <constraint firstAttribute="trailing" secondItem="BXI-42-t07" secondAttribute="trailing" id="t9R-XR-DLk"/>
                     </constraints>
                 </view>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="CBN-ZO-Rbt" secondAttribute="bottom" id="6Hl-4H-YpK"/>
                 <constraint firstAttribute="trailing" secondItem="CBN-ZO-Rbt" secondAttribute="trailing" id="cLL-M7-3pr"/>
@@ -105,9 +114,4 @@
             <point key="canvasLocation" x="137.68115942028987" y="-144.30803571428569"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
